--- a/server/templates/quiz/quiz.html
+++ b/server/templates/quiz/quiz.html
@@ -7,16 +7,207 @@
 {% block content %}
 <div class="container">
     <div class="my-5">
-        <h4>{{ quiz_json }}</h4>
+        <div class="row">
+            <div class="col-8">
+                <h4 class="display-4 text-success quiz-title" id="{{ quiz.id }}">{{ quiz.title }}</h4>
+            </div>
+            <div class="col-4">
+                <h2 id="score"></h2>
+            </div>
+        </div>
+        <hr>
     </div>
+    <div class="container py-5">
+        <div class="d-flex align-items-center py-5" id="quiz-container">
+
+            <div class="col-12 my-4">
+                {% if solution %}
+                <table class="table shadow">
+                    <tr>
+                        <td>Date</td>
+                        <td>{{ solution.date }}</td>
+                    </tr>
+                    <tr>
+                        <td>Score</td>
+                        <td>{{ solution.score }}</td>
+                    </tr>
+                    {% for choice in solution.choices.all %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        <td>{{ choice.score }}</td>
+                        <td>{{ choice.time_taken }}</td>
+                    </tr>
+                    {% endfor %}
+                </table>
+                {% endif %}
+
+            </div>
+
+        </div>
+    </div>
+</div>
 </div>
 
 {% endblock %}
 
 {% block extra_js %}
 <script>
-    var data_2 = "hello there";
-    var data = {{ quiz_json | safe }};
+
+
+    function quiz(id = null) {
+
+        this.questions = [];
+        this.question_time = 0;
+        this.question_score = 0;
+        this.solution = {
+            score: 0.0,
+            quiz: 0,
+            choices: [],
+        };
+        self.answered = true;
+        this.quiz_id = id;
+        this.current_index = -1;
+
+        this.time_start = null;
+        this.timeout = null;
+        this.submit_results = function (e) {
+            if (this.timeout) {
+                clearTimeout(this.timeout)
+            }
+            console.log(this.solution);
+            alert('continue');
+            fetch("{% url 'quiz:create_solution' %}",
+                {
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': '{{ csrf_token }}',
+                    },
+                    method: 'POST',
+                    body: JSON.stringify(this.solution)
+                }
+            ).then(e => e.json()).then(result => {
+                
+            }).catch(error => {
+                console.log(error);
+            })
+            console.log('submitting results');
+        };
+
+        this.fetch_questions = function () {
+            fetch("{% url 'quiz:quiz-data' quiz.id %}").then(e => e.json()).then(result => {
+                this.questions = result['questions'];
+                this.solution.quiz = result['id'];
+                this.question_time = result['time_for_each_question'];
+                this.question_score = result['score_for_each_question'];
+
+                setTimeout(this.conduct_quiz, 1000);
+            }).catch(error => {
+                console.log(error);
+                setTimeout(this.fetch_questions(), 1000);
+            });
+        };
+        this.answer_chosen = function () {
+            var self = this;
+            return function (e) {
+                if (self.timeout) {
+                    clearTimeout(self.timeout);
+                }
+                var answer_id = this.getAttribute('answer-id');
+                var question = self.questions[self.current_index];
+                var now = new Date();
+                var diff = (now - self.time_start) / 1000;
+                console.log("Difference : " +diff )
+                var choice_data = {
+                    "question": question.id,
+                    "score": 0,
+                    "answer": answer_id,
+                    'time_taken': diff,
+                }
+                for (let i = 0; i < question.answers.length; i++) {
+
+                    if (question.answers[i].is_correct && question.answers[i].id == answer_id) {
+                        var score = 0;
+                        // If the time is within 10 percent of the designated time for a question
+                        // Give full marks
+                        if (diff <= Number(self.question_time) / 10) {
+                            score = Number(self.question_score);
+                        } else {
+                            score = Number(self.question_score / 2 + ((self.question_score / 2) * ((self.question_time-diff) / self.question_time)).toFixed(2));
+                            console.log("Score : " + score)
+                        }
+                        choice_data['score'] = score;
+                        self.solution.score += score;
+                    }
+                }
+                self.solution.choices.push(choice_data);
+                self.answered = true;
+                document.getElementById('score').innerText = self.solution.score;
+                console.log(self.solution)
+                self.conduct_quiz();
+            }
+
+
+        };
+        this.conduct_quiz = function () {
+            if (!this.answered && this.current_index >= 0) {
+                this.solution.choices.push({
+                    "question": this.questions[this.current_index].id,
+                    "score": 0,
+                    'time_taken': this.time_for_each_question,
+                });
+            }
+            var quiz_container = document.getElementById('quiz-container');
+            quiz_container.innerHTML = "";
+            this.current_index++;
+            if (this.questions == undefined || this.questions == null || this.questions.length == 0) {
+                this.fetch_questions();
+                return;
+            }
+            if (this.questions.length <= this.current_index) {
+                clearTimeout(this.timeout);
+                this.submit_results();
+                return;
+            } else if (this.current_index <= 0) {
+                this.current_index = 0;
+            }
+
+
+            var question = this.questions[this.current_index];
+
+            let innerHTML = `
+                <div class="col-12 my-4">
+                <div class="question-card shadow p-2" data-id="${ question.id}">
+                    <div class="container">
+                        <p>${ question.question}</p>
+                        <div class="row">`
+
+            for (let i = 0; i < question.answers.length; i++) {
+                let answer = question.answers[i];
+                innerHTML += `
+                            <div class="col-6 col-md-4 col-lg-3">
+                                <a class="btn choices w-100 h-100 d-flex align-items-center justify-content-center text-white bg-primary"
+                                    answer-id="${ answer.id}">
+                                    ${ answer.answer}
+                                </a>
+                            </div>
+                    `
+
+            }
+            quiz_container.innerHTML = innerHTML;
+            var choices = document.getElementsByClassName('choices')
+            for (let i = 0; i < choices.length; i++) {
+                choices[i].addEventListener('click', this.answer_chosen());
+            }
+            this.answered = false;
+            this.time_start = new Date();
+            if (this.current_index <= this.questions.length - 1) {
+                this.timeout = setTimeout(this.conduct_quiz, Number(this.question_time) * 1000);
+            }
+        };
+        this.fetch_questions();
+    }
+    quiz();
+
 </script>
 
 {% endblock %}
