Working on adding quiz: battery running down

--- a/server/account/static/css/style.css
+++ b/server/account/static/css/style.css
@@ -10,6 +10,12 @@
 .question-card-header-section{
     min-height: 200px;
 }
+.hover-show-parent .hover-show{
+    display: none;
+}
+.hover-show-parent:hover .hover-show{
+    display: inline-block;
+}
 .h-min-50{
     min-height: 50vh;
 }
