All things working

--- a/server/templates/_partials/quiz_card.html
+++ b/server/templates/_partials/quiz_card.html
@@ -21,7 +21,7 @@
                 </tr>
             </table>
         </div>
-        <a href="{{ quiz.get_absolute_url }}" class="btn btn-secondary w-100 py-3">Answer</a>
+        <a href="{{ quiz.get_absolute_url }}" class="btn btn-primary w-100 py-3">Answer</a>
     </div>
 
 </div>
