--- a/server/templates/account/dashboard.html
+++ b/server/templates/account/dashboard.html
@@ -20,19 +20,41 @@
     <hr>
     <div class="row">
         {% for solution in user.solutions.all %}
-            <div class="col-md-6 col-lg-4">
-                <h3>{{ solution.quiz.title }}</h3>
-                <table>
-                    <tr>
-                        <td>Score:</td>
-                        <td>{{ solution.score }}</td>
-                    </tr>
-                    <tr>
-                        <td>Date:</td>
-                        <td>{{ solution.date }}</td>
-                    </tr>
-                </table>
+        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-4 py-3">
+
+            <div class="card quiz-card radius-5 h-100 shadow ">
+                <div class="d-flex align-items-center question-card-header-section text-white {% if solution.passed %}bg-success {% else %}bg-danger{% endif %}">
+                    <div class="container py-2">
+                        <h4>
+                            {{ solution.quiz.title }}
+                        </h4>
+                    </div>
+                </div>
+        
+                <div class="">
+                    <table class="table">
+                        <tr class="">
+                            <td>By:</td>
+                            <td>{{ solution.quiz.user.username }}</td>
+                        </tr>
+                        <tr class="">
+                            <td>Date:</td>
+                            <td>{{ solution.date }}</td>
+                        </tr>
+                        <tr class="">
+                            <td>Grade:</td>
+                            <td><span class="btn {% if solution.passed %}btn-success{% else %}btn-danger{% endif %}">{{ solution.get_grade_level }}<span></td>
+                        </tr>
+                        <tr class=''>
+                            <td>Score: </td>
+                            <td>{{ solution.score }}</td>
+                        </tr>
+                    </table>
+                </div>
+                <a href="{{ quiz.get_absolute_url }}" class="btn btn-primary w-100 py-3">View More</a>
             </div>
+        
+        </div>
         {% endfor %}
     </div>
 </div>
