--- a/server/templates/quiz/index.html
+++ b/server/templates/quiz/index.html
@@ -31,6 +31,12 @@
             </a>
         </div>
     </div>
+    <div class="py-3">
+        <div class="shadow p-0 d-flex search-form show flex-row" id="search-form">
+            <input class="w-100 form-control search-input" id="search-input" type="text" placeholder="Enter Quiz Slug">
+            <button class="btn btn-primary" id="search-button">></button>
+        </div>
+    </div>
     
 </div>
 
@@ -51,5 +57,27 @@
 </div>
 
 
+<script>
+    function search (e){
+    var search_term = document.getElementById('search-input').value;
+    if (search_term.length > 0){
+        fetch("{% url 'quiz:get_quiz_by_slug' %}?slug="+search_term).then(e => e.json()).then(
+            result => {
+                if (result['Found']){
+                    window.location = result['url'];
+                }
+                else{
+                    alert(result['error_message'])
+                }
+            }
+        ).catch(e=>{
+            console.log(e);
+        })
+    }
+        
+    }
+    document.getElementById('search-input').addEventListener('change', search);
+    document.getElementById('search-button').addEventListener('click', search);
 
+</script>
 {% endblock %}
