--- a/server/templates/quiz/quiz.html
+++ b/server/templates/quiz/quiz.html
@@ -32,7 +32,7 @@
     <div class="d-flex justify-content-center align-items-center" id="answer-quiz-button-container">
         <button id="answer-quiz" class="btn btn-lg btn-primary">Anwer Quiz</button>
     </div>
-    <div class="container py-5" >
+    <div class="container py-5">
         <div class="d-flex align-items-center py-5" id="quiz-container">
 
             <div class="col-12 my-4 py-3 shadow">
@@ -43,10 +43,12 @@
                     <div>Date Taken</div>
                     <div>{{ solution.date }}</div>
                 </div>
-                
+
                 <div class="my-3 p-3 card d-flex flex-row justify-content-between align-items-center">
                     <div>Grade</div>
-                    <div><span class="btn {% if solution.passed %}btn-success{% else %}btn-danger{% endif %}">{{ solution.get_grade_level }}</span></div>
+                    <div><span
+                            class="btn {% if solution.passed %}btn-success{% else %}btn-danger{% endif %}">{{ solution.get_grade_level }}</span>
+                    </div>
                 </div>
                 <div class="card mt-4">
                     <table class="table table-striped ">
@@ -163,9 +165,13 @@
                         // Give full marks
                         if (diff <= Number(self.question_time) / 10) {
                             score = Number(self.question_score);
+                            
                         } else {
-                            score = Number(self.question_score / 2 + ((self.question_score / 2) * ((self.question_time - diff) / self.question_time)).toFixed(2));
+                            score = Number((self.question_score / 2 + ((self.question_score / 2) * ((Number(self.question_time) - diff) / Number(Number(self.question_time))))).toFixed(2));
+
                         }
+                        
+
                         choice_data['score'] = score;
                         self.solution.score += score;
                     }
@@ -243,7 +249,7 @@
             self = this;
             return function (e) {
                 var start_container = document.getElementById('answer-quiz-button-container');
-                if (start_container){
+                if (start_container) {
                     start_container.innerHTML = '';
                 }
                 self.fetch_questions();
