--- a/server/templates/account/dashboard.html
+++ b/server/templates/account/dashboard.html
@@ -51,7 +51,7 @@
                         </tr>
                     </table>
                 </div>
-                <a href="{{ quiz.get_absolute_url }}" class="btn btn-primary w-100 py-3">View More</a>
+                <a href="{{ solution.quiz.get_absolute_url }}" class="btn btn-primary w-100 py-3">View More</a>
             </div>
         
         </div>
